Fix x icon alignment [skip ci]

--- a/website/static/css/style.css
+++ b/website/static/css/style.css
@@ -503,7 +503,7 @@ select {
     color: #000;
     text-decoration:none;
     font-size: 11px;
-
+    vertical-align: top;
 }
 
 .tag {
